# Jagger

./: README.md  app.py  pyproject.toml
jagger/: __init__.py  globals.py
views/: __init__.py  bd.py  bd.ui  home.py  home.ui  second.py  second.ui
