[tool.poetry]
name = "jagger"
version = "0.1.0"
description = ""
authors = ["Itemize <itemizebi@itemize.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
pyside6 = "^6.5.1.1"
werkzeug = "^2.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
